--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -1,7 +1,42 @@
 :root {
+    --bg: black;
     --main: #5D87FF;
+    --cardBg: black;
     --borderRadius: 5px;
+    --fontColor: white;
+    --darkMain: #1c2a49;
+    --defaultColor: #2A3547;
     --transition: 0.24s cubic-bezier(0.77, 0.2, 0.05, 1) !important;
+}
+
+.dark {
+    // Sidebar & Top Bar
+    body {
+        background: var(--bg) !important;
+    }
+    // Cards & Paper Sheets
+    .MuiContainer-root {
+        background: var(--bg) !important;
+    }
+    .MuiPaper-root {
+        color: var(--fontColor) !important;
+        background: var(--cardBg) !important;
+    }
+    // Menu Sub Headers
+    .MuiListSubheader-root {
+        color: var(--main);
+    }
+    // Navigation Links & Buttons
+    a {
+        transition: var(--transition);
+        color: var(--fontColor) !important;
+        &:hover {
+            background: var(--darkMain) !important;
+        }
+    }
+    .noAccountBox {
+        background: var(--darkMain) !important;
+    }
 }
 
 .w100 { width: 100%; }
