--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -1,11 +1,18 @@
 :root {
-    --bg: black;
+    --bg: #041b44;
+    --teal: #3fa5e3;
     --main: #5D87FF;
-    --cardBg: black;
+    --cardBg: var(--bg);
     --borderRadius: 5px;
     --fontColor: white;
-    --darkMain: #1c2a49;
+    --darkSub: #1c2a49;
+    --darkMain: #1c3c81;
+    --tealLight: #49BEFF;
+    --mainLight: #ecf2ff;
+    --navyBlueBG: #071632;
+    --darkBorder: #151515;
     --defaultColor: #2A3547;
+    --tealSuperLight: #3dd9eb;
     --transition: 0.24s cubic-bezier(0.77, 0.2, 0.05, 1) !important;
 }
 
@@ -17,13 +24,41 @@
 
 .link {
     color: inherit;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 .spacerBox {
     min-width: 75px; 
     min-height: 100px;
     border-radius: 5px;
+}
+
+.loginLogoutButton {
+    color: white;
+    background: var(--main);
+    &:hover {
+        color: var(--main);
+    }
+}
+
+.logoContainer {
+    color: black;
+    font-size: 24px;
+    padding: 15px 22px;
+    &.sidebarLogoContainer {
+        padding: 22px 22px 15px;
+    }
+}
+
+.center {
+    margin: 0 auto;
+    text-align: center;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+.salesOverviewChart {
+    padding-bottom: 23px !important;
 }
 
 .flex {
@@ -36,6 +71,7 @@
     &.gap10 { grid-gap: 10px; }
     &.gap15 { grid-gap: 15px; }
     &.end { justify-content: flex-end; }
+    &.start { justify-content: flex-start; }
     &.column { flex-direction: column !important; }
     &.spaceBetween { justify-content: space-between; }
     &.row {
@@ -84,6 +120,9 @@
 }
 
 .dark {
+    .logoContainer {
+        color: var(--fontColor);
+    }
     .darkItem {
         transition: var(--transition);
         color: var(--fontColor) !important;
@@ -95,13 +134,38 @@
     body {
         background: var(--bg) !important;
     }
+    .sidebarPaper, .mobileMenuPaper {
+        border-color: var(--cardBg);
+    }
     // Cards & Paper Sheets
-    .MuiContainer-root {
+    .MuiContainer-root, .apexcharts-tooltip, .apexcharts-tooltip-title {
         background: var(--bg) !important;
+    }
+    .apexcharts-menu {
+        background: var(--cardBg);
+        border-color: var(--teal);
+        .apexcharts-menu-item {
+            transition: var(--transition);
+            &:hover {
+                background: var(--darkMain);
+            }
+        }
+    }
+    .apexcharts-tooltip, .apexcharts-theme-dark {
+        border: 1px solid var(--teal) !important;
+        .apexcharts-tooltip-title {
+            border-bottom-color: var(--teal) !important;
+        }
     }
     .MuiPaper-root {
         color: var(--fontColor) !important;
         background: var(--cardBg) !important;
+    }
+    th, td {
+        border-color: var(--teal) !important;
+    }
+    .MuiTimelineConnector-root {
+        background: var(--teal);
     }
     // Menu Sub Headers
     .MuiListSubheader-root {
@@ -115,18 +179,27 @@
         @extend .darkItem;
     }
     .profileMenu {
-        .loginLogoutButton {
-            background: var(--main);
-        }
         li, .MuiListItemIcon-root {
             @extend .darkItem;
         }
     }
     .noAccountBox {
         background: var(--darkMain) !important;
+        .MuiButton-root {
+            background: var(--teal);
+            &:hover {
+                background: var(--bg) !important;
+            }
+        }
     }
     // Forms
     input {
         background: var(--darkMain);
+    }
+}
+
+@media (max-width: 768px) {
+    .sidebarBottom {
+        display: none;
     }
 }
