Mobile Responsive Sign In

--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -202,4 +202,9 @@
     .sidebarBottom {
         display: none;
     }
+    .signInOptionsRow {
+        span, a {
+            font-size: 12px;
+        }
+    }
 }
