--- a/src/app/global.scss
+++ b/src/app/global.scss
@@ -1,7 +1,7 @@
 .footerContainer {
     width: 100%;
     margin: 1.5% auto;
-    box-shadow: rgb(145 158 171 / 30%) 0px 1px 2px 0px, rgb(145 158 171 / 12%) 0px 12px 24px -4px !important;
+    box-shadow: var(--cardShadow);
 }
 
 .mobileMenuIconButton {
