--- a/src/app/theme.scss
+++ b/src/app/theme.scss
@@ -19,6 +19,7 @@
     --lightRipple: rgba(0, 81, 255, 0.1);
     --darkRipple: rgba(93, 135, 255, 0.25);
     --transition: 0.24s cubic-bezier(0.77, 0.2, 0.05, 1) !important;
+    --cardShadow: rgb(145 158 171 / 30%) 0px 1px 2px 0px, rgb(145 158 171 / 12%) 0px 12px 24px -4px !important;
 }
 
 .MuiTooltip-arrow {
@@ -33,11 +34,26 @@
     transition: var(--transition);
 }
 
+.mapContainer {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    .map {
+        border: 0px;
+        width: 100%;
+        height: 100%;
+        min-height: 280px;
+        box-shadow: var(--cardShadow);
+        border-radius: var(--borderRadius);
+    }
+}
+
 input {
     padding-top: 0 !important;
     padding-bottom: 0 !important;
     min-height: var(--inputHeight);
     max-height: var(--inputHeight);
+    border-radius: var(--borderRadius);
     height: var(--inputHeight) !important;
 }
 
@@ -65,6 +81,9 @@ input {
     }
     header {
         border-bottom: 1px solid var(--drawerBorder);
+    }
+    input {
+        color: var(--fontColor);
     }
     button {
         &:hover {
@@ -130,7 +149,7 @@ input {
         color: var(--fontColor);
     }
     // Navigation Links & Buttons
-    a {
+    a, .actionBtn {
         @extend .darkItem;
     }
     .profileMenu {
