--- a/src/app/utility.scss
+++ b/src/app/utility.scss
@@ -12,16 +12,21 @@
 .w100 { width: 100%; }
 .m25 { margin: 25px; }
 .m35 { margin: 35px; }
+.p35 { padding: 35px; }
 .h100 { height: 100%; }
 .p10 { padding: 10px; }
 .p15 { padding: 15px; }
 .p20 { padding: 20px; }
 .p25 { padding: 25px; }
 .p30 { padding: 30px; }
-.p35 { padding: 35px; }
 .p50 { padding: 50px; }
 .p5x { padding: 0 5px; }
 .p5y { padding: 5px 0; }
+.mt1 { margin-top: 1px; }
+.mt2 { margin-top: 2px; }
+.mt3 { margin-top: 3px; }
+.mt4 { margin-top: 4px; }
+.mt5 { margin-top: 5px; }
 .p10x { padding: 0 10px; }
 .p10y { padding: 10px 0; }
 .p15x { padding: 0 15px; }
@@ -54,6 +59,7 @@
 .p35t { padding: 35px 0 0; }
 .m10r { margin-right: 10px; }
 .m100t { margin-top: 100px; }
+.mt-25 { margin-top: -25px; }
 .p5y15x { padding: 5px 15px; }
 .p5y20x { padding: 5px 20px; }
 .mb10 { margin-bottom: 10px; }
@@ -64,7 +70,6 @@
 .mb35 { margin-bottom: 35px; }
 .mrauto { margin-right: auto; }
 .w85I { width: 85% !important; }
-.fit { min-width: fit-content; }
 .text-left { text-align: left; }
 .whiteBG { background: white; }
 .bgWhite { background: white; }
@@ -81,6 +86,7 @@
 .ttc { text-transform: capitalize; }
 .text-center { text-align: center; }
 .p15nb { padding: 15px 15px 0 15px; }
+.noBorder { border: none !important }
 .m0Important { margin: 0 !important; }
 .mt-4I { margin-top: -4px !important; }
 .mt-5I { margin-top: -5px !important; }
@@ -90,17 +96,23 @@
 .whiteText { color: white !important; }
 .blackText { color: black !important; }
 .mb15I { margin-bottom: 15px !important; }
+.fit {  @extend .fitMin; @extend .fitMax; }
+.pointerEventsNone { pointer-events: none; }
 .mauto { margin-left: auto; margin-right: auto; }
-
-.link {
-    color: inherit;
-    text-decoration: none !important;
-}
+.fitMin { width: fit-content;  min-width: fit-content; }
+.fitMax { width: fit-content;  max-width: fit-content; }
+.link { color: inherit; text-decoration: none !important; }
 
 .spacerBox {
     min-width: 75px; 
     min-height: 100px;
     border-radius: 5px;
+}
+
+.slashes {
+    font-weight: 600;
+    display: contents;
+    max-width: fit-content;
 }
 
 .center {
