--- a/src/app/utility.scss
+++ b/src/app/utility.scss
@@ -60,6 +60,7 @@
 .m10r { margin-right: 10px; }
 .m100t { margin-top: 100px; }
 .mt-25 { margin-top: -25px; }
+.m35b { margin-bottom: 35px; }
 .p5y15x { padding: 5px 15px; }
 .p5y20x { padding: 5px 20px; }
 .mb10 { margin-bottom: 10px; }
