Fit Clock Rnder

--- a/src/app/theme.scss
+++ b/src/app/theme.scss
@@ -184,6 +184,12 @@ input {
     }
 }
 
+body {
+    &:has(.darkTheme) {
+        background: var(--bg) !important;
+    }
+}
+
 .dark {
     --main: var(--altMain);
     --labelColor: var(--iconRight);
