--- a/public/styles/_theme.scss
+++ b/public/styles/_theme.scss
@@ -1,6 +1,10 @@
+$mobileMenuBreakPointS: 768px;
+$mobileMenuBreakPointM: 992px;
+$mobileMenuBreakPointL: 1200px;
+
 :root {
+    --space: 24px;
     --bg: #041b44;
-    --sideSpace: 24px;
     --teal: #3fa5e3;
     --main: #5D87FF;
     --cardBg: #1c3c81;
@@ -26,6 +30,9 @@
     --drawerBorder: var(--cardBg);
     --lightRipple: rgba(0, 81, 255, 0.1);
     --darkRipple: rgba(93, 135, 255, 0.25);
+    --mobileMenuBreakPointS: $mobileMenuBreakPointS;
+    --mobileMenuBreakPointM: $mobileMenuBreakPointM;
+    --mobileMenuBreakPointL: $mobileMenuBreakPointL;
     --transition: 0.24s cubic-bezier(0.77, 0.2, 0.05, 1) !important;
     --cardShadow: rgb(145 158 171 / 30%) 0px 1px 2px 0px, rgb(145 158 171 / 12%) 0px 12px 24px -4px !important;
 }
@@ -37,6 +44,20 @@
 .borderRadius {
     border-radius: var(--borderRadius);
 }
+
+// .gridReset {
+//     @extend .zeroImportant;
+// }
+
+// .MuiGrid-container {
+//     @extend .gridReset;
+//     grid-gap: var(--space);
+//     width: 100% !important;
+// }
+
+// .MuiGrid-item {
+//     @extend .gridReset;
+// }
 
 .MuiTooltip-arrow {
     color: var(--main);
@@ -90,20 +111,6 @@ input {
     height: var(--inputHeight) !important;
 }
 
-.mapContainer {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    .map {
-        border: 0px;
-        width: 100%;
-        height: 100%;
-        min-height: 280px;
-        @extend .borderRadius;
-        box-shadow: var(--cardShadow);
-    }
-}
-
 .mainButton {
     background: var(--main);
     border: none !important;
@@ -145,157 +152,159 @@ input {
 }
 
 // Theme Colors
-.light {
-    --darkMain: var(--cardBg);
-    --labelColor: var(--main);
-    --drawerBorder: var(--fontColor);
-    header {
-        border-bottom: 1px solid var(--drawerBorder);
-    }
-    .logoContainer strong {
-        color: var(--darkMain) !important;
-    }
-    .sidebarPaper {
-        border-color: var(--drawerBorder);
-    }
-    .MuiListSubheader-root {
-        color: var(--labelColor);
-    }
-    .MuiInputLabel-root {
-        color: var(--labelColor);
-    }
-    button {
-        &:hover {
-            .MuiTouchRipple-root {
-                background: var(--lightRipple);
-            }
-        }
-    }
-}
-
 body {
-    &:has(.darkTheme) {
-        background: var(--bg) !important;
-    }
-}
-
-.dark {
-    --main: var(--altMain);
-    --labelColor: var(--iconRight);
-    // Sidebar & Top Bar
-    body {
-        background: var(--bg) !important;
-    }
-    header {
-        border-bottom: 1px solid var(--drawerBorder);
-    }
-    .fontColor {
-        color: var(--fontColor);
-    }
-    // Menu
-    // Menu Sub Headers
-    .MuiListSubheader-root {
-        color: var(--labelColor);
-    }
-    // Menu Active
-    .MuiListItem-root {
-        .MuiButtonBase-root {
-            &.Mui-selected {
-                background: var(--main);
-            }
+    &:has(.lightTheme) {
+        --darkMain: var(--cardBg);
+        --labelColor: var(--main);
+        --drawerBorder: var(--fontColor);
+        header {
+            border-bottom: 1px solid var(--drawerBorder);
         }
-    }
-    h1, h2, h3, h4, h5, h6, p {
-        color: var(--fontColor);
-    }
-    .MuiInputLabel-root {
-        color: var(--labelColor);
-    }
-    input {
-        color: var(--fontColor);
-        background: var(--darkMain);
-    }
-    // Navigation Links & Buttons
-    a, .actionBtn {
-        @extend .darkItem;
-    }
-    .profileMenu {
-        li, .MuiListItemIcon-root {
-            @extend .darkItem;
+        .logoContainer strong {
+            color: var(--darkMain) !important;
         }
-    }
-    .noAccountBox {
-        background: var(--darkMain) !important;
-        .MuiButton-root {
-            background: var(--teal);
+        .sidebarPaper {
+            border-color: var(--drawerBorder);
+        }
+        .MuiListSubheader-root {
+            color: var(--labelColor);
+        }
+        .MuiInputLabel-root {
+            color: var(--labelColor);
+        }
+        button {
             &:hover {
-                background: var(--bg) !important;
-            }
-        }
-    }
-    .geoDataFormTypesToggleBtn {
-        color: var(--fontColor);
-    }
-    button {
-        &:hover {
-            .MuiTouchRipple-root {
-                background: var(--darkRipple);
-            }
-        }
-    }
-    .drawerContainer {
-        border-right: 1px solid var(--drawerBorder);
-    }
-    .logoContainer {
-        color: var(--fontColor);
-    }
-    .darkItem {
-        transition: var(--transition);
-        color: var(--fontColor) !important;
-        &:hover {
-            background: var(--darkMain) !important;
-        }
-    }
-    .apexcharts-menu-icon {
-        svg {
-            path {
-                &:last-child {
-                    fill: var(--fontColor);
+                .MuiTouchRipple-root {
+                    background: var(--lightRipple);
                 }
             }
         }
     }
-    .sidebarPaper, .mobileMenuPaper {
-        border-color: var(--cardBg);
-    }
-    // Cards & Paper Sheets
-    .MuiContainer-root, .apexcharts-tooltip, .apexcharts-tooltip-title {
+    &:has(.darkTheme) {
         background: var(--bg) !important;
-    }
-    .apexcharts-menu {
-        background: var(--cardBg);
-        border-color: var(--teal);
-        .apexcharts-menu-item {
-            transition: var(--transition);
-            &:hover {
-                background: var(--darkMain);
+        --main: var(--altMain);
+        --labelColor: var(--iconRight);
+        // Sidebar & Top Bar
+        header {
+            border-bottom: 1px solid var(--drawerBorder);
+        }
+        .fontColor {
+            color: var(--fontColor);
+        }
+        // Menu
+        // Menu Sub Headers
+        .MuiListSubheader-root {
+            color: var(--labelColor);
+        }
+        // Menu Active
+        .MuiListItem-root {
+            .MuiButtonBase-root {
+                .menuIcon {
+                    color: var(--labelColor);
+                    transition: none !important;
+                }
+                &.Mui-selected {
+                    background: var(--main);
+                    &:not(:hover) {
+                        .menuIcon {
+                            color: var(--cardBg);
+                        }
+                    }
+                }
             }
         }
-    }
-    .apexcharts-tooltip, .apexcharts-theme-dark {
-        border: 1px solid var(--teal) !important;
-        .apexcharts-tooltip-title {
-            border-bottom-color: var(--teal) !important;
+        h1, h2, h3, h4, h5, h6, p {
+            color: var(--fontColor);
         }
-    }
-    .MuiPaper-root {
-        color: var(--fontColor) !important;
-        background: var(--cardBg) !important;
-    }
-    th, td {
-        border-color: var(--teal) !important;
-    }
-    .MuiTimelineConnector-root {
-        background: var(--teal);
+        .MuiInputLabel-root {
+            color: var(--labelColor);
+        }
+        input {
+            color: var(--fontColor);
+            background: var(--darkMain);
+        }
+        // Navigation Links & Buttons
+        a, .actionBtn {
+            @extend .darkItem;
+        }
+        .profileMenu {
+            li, .MuiListItemIcon-root {
+                @extend .darkItem;
+            }
+        }
+        .noAccountBox {
+            background: var(--darkMain) !important;
+            .MuiButton-root {
+                background: var(--teal);
+                &:hover {
+                    background: var(--bg) !important;
+                }
+            }
+        }
+        .geoDataFormTypesToggleBtn {
+            color: var(--fontColor);
+        }
+        button {
+            &:hover {
+                .MuiTouchRipple-root {
+                    background: var(--darkRipple);
+                }
+            }
+        }
+        .drawerContainer {
+            border-right: 1px solid var(--drawerBorder);
+        }
+        .logoContainer {
+            color: var(--fontColor);
+        }
+        .darkItem {
+            transition: var(--transition);
+            color: var(--fontColor) !important;
+            &:hover {
+                background: var(--darkMain) !important;
+            }
+        }
+        .apexcharts-menu-icon {
+            svg {
+                path {
+                    &:last-child {
+                        fill: var(--fontColor);
+                    }
+                }
+            }
+        }
+        .sidebarPaper, .mobileMenuPaper {
+            border-color: var(--cardBg);
+        }
+        // Cards & Paper Sheets
+        .MuiContainer-root, .apexcharts-tooltip, .apexcharts-tooltip-title {
+            background: var(--bg) !important;
+        }
+        .apexcharts-menu {
+            background: var(--cardBg);
+            border-color: var(--teal);
+            .apexcharts-menu-item {
+                transition: var(--transition);
+                &:hover {
+                    background: var(--darkMain);
+                }
+            }
+        }
+        .apexcharts-tooltip, .apexcharts-theme-dark {
+            border: 1px solid var(--teal) !important;
+            .apexcharts-tooltip-title {
+                border-bottom-color: var(--teal) !important;
+            }
+        }
+        .MuiPaper-root {
+            color: var(--fontColor) !important;
+            background: var(--cardBg) !important;
+        }
+        th, td {
+            border-color: var(--teal) !important;
+        }
+        .MuiTimelineConnector-root {
+            background: var(--teal);
+        }
     }
 }
